--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Abigail’s Website </title>
 </head>
@@ -20,7 +21,6 @@
 
 <a href="mailto:abigailalandwehr@gmail.com">
     <img src="img/abigail-portrait.jpg"
-        <img src=<img src="img/abigail-portrait.jpg"
         alt="Photo of Abigail sitting on a bed outside"
         width="460"
         height="600">
