--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <head>
         <link rel="stylesheet" href="font.css">
        <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,13 +16,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Halant:wght@300;400;500;600;700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
+        
     <title> Abigail’s Website </title>
 <!-- <link rel="stylesheet" href="styles.css"> -->
 </head>
 
 <nav>
       <a href="https://www.abigaillandwehr.com/">Abigail Landwehr Portfolio</a>  
-      <a href=“oldindex.html">Unedited Home</a>
+      <a href=oldindex.html>Unedited Home</a>
 
     </nav>
 
@@ -38,8 +40,8 @@
 <a href="mailto:abigailalandwehr@gmail.com">
     <img src="img/abigail-portrait2.jpg"
         alt="Photo of Abigail sitting on a bed outside"
-        width="360"
-        height="700">
+        width="460"
+        height="600">
       </a>
 
 <p>
