--- a/index.html
+++ b/index.html
@@ -37,12 +37,15 @@
 
 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras congue lorem mattis gravida condimentum. Nam semper ullamcorper dolor sit amet posuere. Morbi viverra fringilla sapien quis tincidunt. Aliquam cursus, quam sit amet dignissim eleifend, diam ipsum convallis massa, at luctus metus nulla sed risus. </p>
 
-<a href="mailto:abigailalandwehr@gmail.com">
-    <img src="img/abigail-portrait2.jpg"
+<a href="mailto:abigailalandwehr@gmail.com"> </a>
+
+        <div style="text-align: center;">
+        <img src="img/abigail-portrait2.jpg"
         alt="Photo of Abigail sitting on a bed outside"
         width="460"
         height="600">
-      </a>
+                </div>
+    
 
 <p>
 <a href="mailto:abigailalandwehr@gmail.com"> Email me!
