--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <nav>
       <a href="https://www.abigaillandwehr.com/">Abigail Landwehr Portfolio</a>  
       <a href=oldindex.html>Unedited Home</a>
+        <a href=stargate-ranked.html>Stargate Ranked</a>
 
     </nav>
 
