--- a/stargate-ranked.html
+++ b/stargate-ranked.html
@@ -25,7 +25,7 @@
 
         <section class="media-holder">
             <div class="image-holder">
-                <img src="images/season_7.jpg" alt="Cover art of Stargate season 7">
+                <img src="img/season_7.jpg" alt="Cover art of Stargate season 7">
             </div>
             <div class="text-holder">
                 <h2>Season 7</h2>
@@ -37,7 +37,7 @@
 
         <section class="media-holder">
             <div class="image-holder">
-                <img src="images/season_1.png" alt="Cover art of Stargate season 1">
+                <img src="img/season_1.png" alt="Cover art of Stargate season 1">
             </div>
             <div class="text-holder">
                 <h2>Season 1</h2>
@@ -49,7 +49,7 @@
 
         <section class="media-holder">
             <div class="image-holder">
-                <img src="images/season_2.jpg" alt="Cover art of Stargate season 2">
+                <img src="img/season_2.jpg" alt="Cover art of Stargate season 2">
             </div>
             <div class="text-holder">
                 <h2>Season 2</h2>
@@ -61,7 +61,7 @@
 
         <section class="media-holder">
             <div class="image-holder">
-                <img src="images/season_6.jpg" alt="Cover art of Stargate season 6">
+                <img src="img/season_6.jpg" alt="Cover art of Stargate season 6">
             </div>
             <div class="text-holder">
                 <h2>Season 6</h2>
@@ -73,7 +73,7 @@
 
         <section class="media-holder">
             <div class="image-holder">
-                <img src="images/season_9.jpg" alt="Cover art of Stargate season 9">
+                <img src="img/season_9.jpg" alt="Cover art of Stargate season 9">
             </div>
             <div class="text-holder">
                 <h2>Season 9</h2>
@@ -85,7 +85,7 @@
 
         <section class="media-holder">
             <div class="image-holder">
-                <img src="images/season_5.jpg" alt="Cover art of Stargate season 5">
+                <img src="img/season_5.jpg" alt="Cover art of Stargate season 5">
             </div>
             <div class="text-holder">
                 <h2>Season 5</h2>
@@ -97,7 +97,7 @@
 
         <section class="media-holder">
             <div class="image-holder">
-                <img src="images/season_3.jpg" alt="Cover art of Stargate season 3">
+                <img src="img/season_3.jpg" alt="Cover art of Stargate season 3">
             </div>
             <div class="text-holder">
                 <h2>Season 3</h2>
@@ -109,7 +109,7 @@
 
         <section class="media-holder">
             <div class="image-holder">
-                <img src="images/season_10.png" alt="Cover art of Stargate season 10">
+                <img src="img/season_10.png" alt="Cover art of Stargate season 10">
             </div>
             <div class="text-holder">
                 <h2>Season 10</h2>
@@ -119,8 +119,32 @@
             </div>
         </section>
 
-        <section class="media-holder">
-            <div class="image-holder">
-                <img src="images/season_8.jpg" alt="Cover art of Stargate season 8">
-            </div>
-            <div class="
+                <section class="media-holder">
+        <div class="image-holder">
+          <img src="img/season_8.jpg" alt="Cover art of Stargate season 8">
+        </div>
+        <div class="text-holder">
+          <h2>Season 8</h2>
+          <p>July 9, 2004</p>
+          <p><a href="https://www.imdb.com/title/tt0118480/episodes/?season=8">A full list of episodes can be found here.</a></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras congue lorem mattis gravida condimentum. Nam semper ullamcorper dolor sit amet posuere. Morbi viverra fringilla sapien quis tincidunt. Aliquam cursus, quam sit amet dignissim eleifend, diam ipsum convallis massa, at luctus metus nulla sed risus. </p>
+        </div>
+      </section>
+
+<section class="media-holder">
+        <div class="image-holder">
+          <img src="img/season_4.jpg" alt="Cover art of Stargate season 4">
+        </div>
+        <div class="text-holder">
+          <h2>Season 4</h2>
+          <p>June 30, 2000</p>
+          <p><a href="https://www.imdb.com/title/tt0118480/episodes/?season=4">A full list of episodes can be found here.</a></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras congue lorem mattis gravida condimentum. Nam semper ullamcorper dolor sit amet posuere. Morbi viverra fringilla sapien quis tincidunt. Aliquam cursus, quam sit amet dignissim eleifend, diam ipsum convallis massa, at luctus metus nulla sed risus. </p>
+        </div>
+      </section>
+
+    </main>
+
+    <footer>Abigail Landwehr, 2024; All images come from IMDB.</footer>
+  </body>
+</html>"
