--- a/stargate-ranked.html
+++ b/stargate-ranked.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
-    <title>The Stargate SG-1 seasons, in order from worst to best</title>
+    <title>Stargate SG-1 seasons, in order from worst to best</title>
     <link rel="stylesheet" href="my-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
     </nav>
 
     <main id="content">
-        <h1>The Stargate SG-1 seasons, in order from worst to best</h1>
+        <h1>Stargate SG-1 seasons, in order from worst to best</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at felis id quam porttitor posuere. Pellentesque nec aliquet est. Nam malesuada consequat condimentum. Aliquam rutrum fermentum odio at mattis. Etiam scelerisque enim sit amet tempor ullamcorper. Vestibulum ultricies metus nibh, ut tristique ligula malesuada vel. Nullam id iaculis est.</p>
 
         <section class="media-holder">
