--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <a href="https://www.abigaillandwehr.com/">Abigail Landwehr Portfolio</a>  
       <a href=oldindex.html>Unedited Home</a>
         <a href=stargate-ranked.html>Stargate Ranked</a>
+        <a href=wyoming-ghost-towns.html>Ghost towns in Wyoming</a>
 
     </nav>
 
