--- a/wyoming-ghost-towns.html
+++ b/wyoming-ghost-towns.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a class="active" href="stargate-ranked.html">The Stargate SG-1 seasons ranked</a></li>
-<li><a class="active" href="wyoming-ghost-towns.html">Ghost towns in Wyoming worth the drive</a></li>
+<li><a class="active" href="wyoming-ghost-towns.html">Ghost towns in Wyoming</a></li>
             <li><a href="https://www.abigaillandwehr.com/">Abigail Landwehr portfolio</a></li>
         </ul>
     </nav>
