Update pig-images w/ js.html

--- a/pig-images.html
+++ b/pig-images.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+ <html class="no-js" lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Where pigs fly</title>
@@ -103,4 +103,6 @@
     </main>
     <footer>Abigail Landwehr, 2024</footer>
   </body>
+
+<script src="js/gallery.js"></script>
 </html>
