--- a/where-pigs-fly.html
+++ b/where-pigs-fly.html
@@ -2,7 +2,7 @@
  <html class="no-js" lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Where pigs fly</title>
+    <title>Where pigs fly: Bear Creek Saloon Pig Races</title>
  <link rel="stylesheet" href="my-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,12 +15,14 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a class="active" href="stargate-ranked.html">The Stargate SG-1 seasons ranked</a></li>
+<li><a class="active" href="wyoming-ghost-towns.html">Ghost towns in Wyoming</a></li>
+         <li><a class="active" href="where-pigs-fly.html">Bear Creek Saloon Pig Races</a></li>
             <li><a href="https://www.abigaillandwehr.com/">Abigail Landwehr portfolio</a></li>
         </ul>
     </nav>
 
     <main id="content">
-      <h1>Where pigs fly</h1>
+      <h1>Where pigs fly: Bear Creek Saloon Pig Races</h1>
       <p>In Bearcreek, Montana, the Bear Creek Saloon Pig Races are the pride and joy of the town with fewer than a hundred residents. Starting in the summer and continuing through the fall, pig races take place on Thursdays, Fridays, Saturdays, and Sundays with 12 races on a 15-minute schedule. Each pig is named and sponsored by a local company, and viewers can place their bets on the racers. The winning pig earns half of the $50 race pot, while the other half is allocated to scholarships for high school students in Carbon County.</p>
 
       <figure class="gallery-image hideThis">
