--- a/wyoming-ghost-towns.html
+++ b/wyoming-ghost-towns.html
@@ -16,6 +16,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a class="active" href="stargate-ranked.html">The Stargate SG-1 seasons ranked</a></li>
 <li><a class="active" href="wyoming-ghost-towns.html">Ghost towns in Wyoming</a></li>
+		<li><a class="active" href="where-pigs-fly.html">Bear Creek Saloon Pig Races</a></li>
             <li><a href="https://www.abigaillandwehr.com/">Abigail Landwehr portfolio</a></li>
         </ul>
     </nav>
