Photo changes.html

--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
 
         <div style="text-align: center;">
         <img src="img/abigail-portrait2.jpg"
-        alt="Photo of Abigail sitting on a bed outside"
-        width="460"
-        height="600">
+        alt="Photo of Abigail outside of a restaurant in Wyoming."
                 </div>
     
 
