Try this again.html

--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <html lang="en" dir="ltr">
+<html lang="en" dir="ltr">
 <head>
-    <meta charset="utf-8">
-    <title> Abigail’s Website </title>
-    <link rel="stylesheet" href="my-style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Halant:wght@300;400;500;600;700&family=Kalam:wght@300;400;700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <meta charset="utf-8">
+    <title>Abigail’s website</title>
+    <link rel="stylesheet" href="my-style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Halant:wght@300;400;500;600;700&family=Kalam:wght@300;400;700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 
-<nav>
-      <a href="https://www.abigaillandwehr.com/">Abigail Landwehr Portfolio</a>  
-      <a href=oldindex.html>Unedited Home</a>
-        <a href=stargate-ranked.html>Stargate Ranked</a>
-        <a href=where-pigs-fly.html>Bear Creek Saloon Pig Races</a>
-        <a href=wyoming-ghost-towns.html>Ghost towns in Wyoming</a>
 
-    </nav>
+<nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a class="active" href="stargate-ranked.html">The Stargate SG-1 seasons ranked</a></li>
+            <li><a class="active" href="wyoming-ghost-towns.html">Ghost towns in Wyoming</a></li>
+            <li><a class="active" href="where-pigs-fly.html">Bear Creek Saloon Pig Races</a></li>
+            <li><a href="https://www.abigaillandwehr.com/">Abigail Landwehr portfolio</a></li>
+        </ul>
+    </nav>
+
 
 <body>
 
@@ -31,12 +33,12 @@
 
 <a href="mailto:abigailalandwehr@gmail.com"> </a>
 
-        <div style="text-align: center;">
-        <img src="img/abigail-portrait3.jpg"
-        alt="Photo of Abigail outside of a restaurant in Wyoming."
-                </div>
+         <section class="media-holder">
+            <div class="image-holder">
+<div style="text-align: center;">
+                <img src="img/abigail-portrait3.jpg" alt=""Photo of Abigail outside of a restaurant in Wyoming.">
+            </div>
     
-
 <p>
 <a href="mailto:abigailalandwehr@gmail.com"> Email me!
          </a>
