--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Halant:wght@300;400;500;600;700&family=Kalam:wght@300;400;700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
+  <body>
 
+    <a class="skip-link" href="#content">Skip to content</a>
 
-<nav>
+    <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a class="active" href="stargate-ranked.html">The Stargate SG-1 seasons ranked</a></li>
@@ -20,31 +22,18 @@
         </ul>
     </nav>
 
+    <main id="content">
 
-<body>
-
-    <h1>Abigail’s First Website!</h1>
-
-<h2>Hello and welcome.</h2>
-
+     <h1>Abigail’s First Website!</h1>
     <p> We play none of the hits, all of the time. </p>
 
-<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras congue lorem mattis gravida condimentum. Nam semper ullamcorper dolor sit amet posuere. Morbi viverra fringilla sapien quis tincidunt. Aliquam cursus, quam sit amet dignissim eleifend, diam ipsum convallis massa, at luctus metus nulla sed risus. </p>
+<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras congue lorem mattis gravida condimentum. Nam semper ullamcorper dolor sit amet posuere. Morbi viverra fringilla sapien quis tincidunt. Aliquam cursus, quam sit amet dignissim eleifend, diam ipsum convallis massa, at luctus metus nulla sed risus. </p> 
 
-<a href="mailto:abigailalandwehr@gmail.com"> </a>
+  <a href="mailto:abigailalandwehr@gmail.com">
+     <img src="img/abigail-portrait3.jpg" alt=""Photo of Abigail outside of a restaurant in Wyoming.">
+  </a>
 
-         <section class="media-holder">
-            <div class="image-holder">
-<div style="text-align: center;">
-                <img src="img/abigail-portrait3.jpg" alt=""Photo of Abigail outside of a restaurant in Wyoming.">
-            </div>
-    
-<p>
-<a href="mailto:abigailalandwehr@gmail.com"> Email me!
-         </a>
-</p>
-
-<h2>List of my top five crab rangoon spots:</h2>
+<h3>List of my top five crab rangoon spots:</h3>
 
 <ul>
     <li><a href="https://thaithaicody.com/">Thai Thai</a></li>
@@ -54,4 +43,9 @@
 <li><a href="https://littlethaisushi.com/">Little Thai & Sushi</a></li> 
 </ul>
 
-</body>
+<footer>Abigail Landwehr, 2024</footer>
+
+</main>
+
+  </body>
+</html>
