Shorter nav.html

--- a/where-pigs-fly.html
+++ b/where-pigs-fly.html
@@ -14,10 +14,10 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a class="active" href="stargate-ranked.html">The Stargate SG-1 seasons ranked</a></li>
-<li><a class="active" href="wyoming-ghost-towns.html">Ghost towns in Wyoming</a></li>
-         <li><a class="active" href="where-pigs-fly.html">Bear Creek Saloon Pig Races</a></li>
-            <li><a href="https://www.abigaillandwehr.com/">Abigail Landwehr portfolio</a></li>
+            <li><a class="active" href="stargate-ranked.html">Stargate SG-1</a></li>
+            <li><a class="active" href="wyoming-ghost-towns.html">Wyoming Ghost towns</a></li>
+            <li><a class="active" href="where-pigs-fly.html">Pig Races</a></li>
+            <li><a href="https://www.abigaillandwehr.com/">Portfolio</a></li>
         </ul>
     </nav>
 
