--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
     <a class="skip-link" href="#content">Skip to content</a>
 
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a class="active" href="stargate-ranked.html">The Stargate SG-1 seasons ranked</a></li>
-            <li><a class="active" href="wyoming-ghost-towns.html">Ghost towns in Wyoming</a></li>
-            <li><a class="active" href="where-pigs-fly.html">Bear Creek Saloon Pig Races</a></li>
-            <li><a href="https://www.abigaillandwehr.com/">Abigail Landwehr portfolio</a></li>
-        </ul>
-    </nav>
+   <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a class="active" href="stargate-ranked.html">Stargate SG-1</a></li>
+            <li><a class="active" href="wyoming-ghost-towns.html">Wyoming Ghost towns</a></li>
+            <li><a class="active" href="where-pigs-fly.html">Pig Races</a></li>
+            <li><a href="https://www.abigaillandwehr.com/">Portfolio</a></li>
+        </ul>
+    </nav>
 
     <main id="content">
 
