--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
 
    <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a class="active" href="index.html">Home</a></li>
             <li><a class="active" href="stargate-ranked.html">Stargate SG-1</a></li>
             <li><a class="active" href="wyoming-ghost-towns.html">Wyoming Ghost towns</a></li>
             <li><a class="active" href="where-pigs-fly.html">Pig Races</a></li>
-            <li><a href="https://www.abigaillandwehr.com/">Portfolio</a></li>
         </ul>
     </nav>
 
@@ -36,11 +35,11 @@
 <h3>List of my top five crab rangoon spots:</h3>
 
 <ul>
-    <li><a href="https://thaithaicody.com/">Thai Thai</a></li>
-    <li><a href="https://shuang3.wixsite.com/okiimama/menu">Okii Mama</a></li>
-    <li><a href="https://www.facebook.com/p/Lins-Chinese-Reataurant-100079856525559/">Lin's Restaurant and Lounge</a></li>
-    <li><a href="https://www.thaiplacekc.com/">Thai Place</a></li>
-<li><a href="https://littlethaisushi.com/">Little Thai & Sushi</a></li> 
+    <li><a class="active" href="https://thaithaicody.com/">Thai Thai</a></li>
+    <li><a class="active" href="https://shuang3.wixsite.com/okiimama/menu">Okii Mama</a></li>
+    <li><a class="active" href="https://www.facebook.com/p/Lins-Chinese-Reataurant-100079856525559/">Lin's Restaurant and Lounge</a></li>
+    <li><a class="active" href="https://www.thaiplacekc.com/">Thai Place</a></li>
+    <li><a class="active" href="https://littlethaisushi.com/">Little Thai & Sushi</a></li> 
 </ul>
 
 <footer>Abigail Landwehr, 2024</footer>
