--- a/stargate-ranked.html
+++ b/stargate-ranked.html
@@ -13,11 +13,10 @@
     <a class="skip-link" href="#content">Skip to content</a>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a class="active" href="index.html">Home</a></li>
             <li><a class="active" href="stargate-ranked.html">Stargate SG-1</a></li>
             <li><a class="active" href="wyoming-ghost-towns.html">Wyoming Ghost towns</a></li>
             <li><a class="active" href="where-pigs-fly.html">Pig Races</a></li>
-            <li><a href="https://www.abigaillandwehr.com/">Portfolio</a></li>
         </ul>
     </nav>
 
