--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras congue lorem mattis gravida condimentum. Nam semper ullamcorper dolor sit amet posuere. Morbi viverra fringilla sapien quis tincidunt. Aliquam cursus, quam sit amet dignissim eleifend, diam ipsum convallis massa, at luctus metus nulla sed risus. </p> 
 
   <a href="mailto:abigailalandwehr@gmail.com">
-     <img src="img/abigail-portrait3.jpg" width="500" height="375" alt="Photo of Abigail outside of a restaurant in Wyoming.">
+     <img src="img/abigail-portrait3.jpg" width="700" height="510" alt="Photo of Abigail outside of a restaurant in Wyoming.">
   </a>
 
 <h3>List of my top five crab rangoon spots:</h3>
 
 <ul>
-    <li><a class="active" href="https://thaithaicody.com/">Thai Thai</a></li>
-    <li><a class="active" href="https://shuang3.wixsite.com/okiimama/menu">Okii Mama</a></li>
-    <li><a class="active" href="https://www.facebook.com/p/Lins-Chinese-Reataurant-100079856525559/">Lin's Restaurant and Lounge</a></li>
-    <li><a class="active" href="https://www.thaiplacekc.com/">Thai Place</a></li>
-    <li><a class="active" href="https://littlethaisushi.com/">Little Thai & Sushi</a></li> 
+    <li><a href="https://thaithaicody.com/">Thai Thai</a></li>
+    <li><a href="https://shuang3.wixsite.com/okiimama/menu">Okii Mama</a></li>
+    <li><a href="https://www.facebook.com/p/Lins-Chinese-Reataurant-100079856525559/">Lin's Restaurant and Lounge</a></li>
+    <li><a href="https://www.thaiplacekc.com/">Thai Place</a></li>
+    <li><a href="https://littlethaisushi.com/">Little Thai & Sushi</a></li> 
 </ul>
 
 <footer>Abigail Landwehr, 2024</footer>
