--- a/wyoming-ghost-towns.html
+++ b/wyoming-ghost-towns.html
@@ -22,9 +22,9 @@
 
     <main id="content">
       <h1>Eight ghost towns in Wyoming worth the drive</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 
-	     <img src="img/wyoming-photo.jpg" width="750" height="500" alt="Photo of Wyoming mountain range.">
+	     <img src="img/wyoming-photo.jpg" width="750" height="485" alt="Photo of Wyoming mountain range.">
 
       <section class="location-holder">
 				<div class="text-holder">
