--- a/where-pigs-fly.html
+++ b/where-pigs-fly.html
@@ -2,7 +2,7 @@
  <html class="no-js" lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Where pigs fly: Bear Creek Saloon Pig Races</title>
+    <title>Where pigs fly: Bear Creek Saloon Pig Races in Montana</title>
  <link rel="stylesheet" href="my-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +21,7 @@
     </nav>
 
     <main id="content">
-      <h1>Where pigs fly: Bear Creek Saloon Pig Races</h1>
+      <h1>Where pigs fly: Bear Creek Saloon Pig Races in Montana</h1>
       <p>In Bearcreek, Montana, the Bear Creek Saloon Pig Races are the pride and joy of the town with fewer than a hundred residents. Starting in the summer and continuing through the fall, pig races take place on Thursdays, Fridays, Saturdays, and Sundays with 12 races on a 15-minute schedule. Each pig is named and sponsored by a local company, and viewers can place their bets on the racers. The winning pig earns half of the $50 race pot, while the other half is allocated to scholarships for high school students in Carbon County.</p>
 
       <figure class="gallery-image hideThis">
