--- a/where-pigs-fly.html
+++ b/where-pigs-fly.html
@@ -96,9 +96,9 @@
 
 
     <div class="button_holder">
-      <button id="button_previous">Previous</button>
+      <button id="button_previous">←</button>
       <p id="stepper"></p>
-      <button id="button_next">Next</button>
+      <button id="button_next">→</button>
     </div>
 
     </main>
