Content add index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
-    <title>Abigail’s website</title>
+    <title>Abigail Landwehr's Site</title>
     <link rel="stylesheet" href="my-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,23 +16,25 @@
         <ul>
             <li><a class="active" href="index.html">Home</a></li>
             <li><a class="active" href="stargate-ranked.html">Stargate SG-1</a></li>
-            <li><a class="active" href="wyoming-ghost-towns.html">Wyoming Ghost towns</a></li>
+            <li><a class="active" href="wyoming-ghost-towns.html">Wyoming Ghost Towns</a></li>
             <li><a class="active" href="where-pigs-fly.html">Pig Races</a></li>
         </ul>
     </nav>
 
     <main id="content">
 
-     <h1>Abigail’s First Website!</h1>
-    <p> We play none of the hits, all of the time. </p>
+     <h1>Abigail Landwehr's Site</h1>
+    
 
-<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras congue lorem mattis gravida condimentum. Nam semper ullamcorper dolor sit amet posuere. Morbi viverra fringilla sapien quis tincidunt. Aliquam cursus, quam sit amet dignissim eleifend, diam ipsum convallis massa, at luctus metus nulla sed risus. </p> 
+<p>Abigail Landwehr is a multimedia journalist. This means that her interest ranges from anything the broad term covers: writing, photography, videography, design, and audio. She just loves the storytelling process the most.</p> 
+
+<p>She grew up in Wyoming, about an hour and a half away from Yellowstone- that also means enough “Wyoming doesn’t exist” jokes to last her a lifetime. In her free time, she enjoys exactly the same things she does in her daily routine including storytelling, carrying her camera around wherever she goes and making obscure 90s sitcom references. (Ask her about Frasier, she loves Frasier.)</p> 
 
   <a href="mailto:abigailalandwehr@gmail.com">
      <img src="img/abigail-portrait3.jpg" width="750" height="490" alt="Photo of Abigail outside of a restaurant in Wyoming.">
   </a>
 
-<h3>List of my top five crab rangoon spots:</h3>
+<h3>List of her top five crab rangoon spots:</h3>
 
 <ul>
     <li><a href="https://thaithaicody.com/">Thai Thai</a></li>
