--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
      <h1>Abigail Landwehr's Site</h1>
     
 
-<p>Abigail Landwehr is a multimedia journalist. This means that her interest ranges from anything the broad term covers: writing, photography, videography, design, and audio. She just loves the storytelling process the most.</p> 
+<p>Abigail Landwehr is a multimedia journalist. Her interest ranges from anything the broad term covers: writing, photography, videography, design, and audio. She just loves the storytelling process the most. <a href="https://www.abigaillandwehr.com/">You can check out her multimedia portfolio here.</a></p> 
 
-<p>She grew up in Wyoming, about an hour and a half away from Yellowstone- that also means enough “Wyoming doesn’t exist” jokes to last her a lifetime. In her free time, she enjoys exactly the same things she does in her daily routine including storytelling, carrying her camera around wherever she goes and making obscure 90s sitcom references. (Ask her about Frasier, she loves Frasier.)</p> 
+<p>She grew up in Wyoming, about an hour and a half away from Yellowstone- that also means enough “Wyoming doesn’t exist” jokes to last her a lifetime.</p> 
 
   <a href="mailto:abigailalandwehr@gmail.com">
      <img src="img/abigail-portrait3.jpg" width="750" height="490" alt="Photo of Abigail outside of a restaurant in Wyoming.">
