--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
      <h1>Abigail Landwehr's Site</h1>
     
 
-<p>Abigail Landwehr is a multimedia journalist. Her interest ranges from anything the broad term covers: writing, photography, videography, design, and audio. She just loves the storytelling process the most. You can check out her multimedia portfolio <a href="https://www.abigaillandwehr.com/">here.</a></p> 
+<p>Abigail Landwehr is a multimedia journalist. Her interest ranges from anything the broad term covers: writing, photography, videography, design, and audio. She just loves the storytelling process the most.</p> 
 
 <p>She grew up in Wyoming, about an hour and a half away from Yellowstone- that also means enough “Wyoming doesn’t exist” jokes to last her a lifetime.</p> 
 
   <a href="mailto:abigailalandwehr@gmail.com">
      <img src="img/abigail-portrait3.jpg" width="750" height="490" alt="Photo of Abigail outside of a restaurant in Wyoming.">
   </a>
+
+      <p>You can check out her multimedia portfolio <a href="https://www.abigaillandwehr.com/">here.</a></p>
 
 <h3>List of her top five crab rangoon spots:</h3>
 
