--- a/wyoming-ghost-towns.html
+++ b/wyoming-ghost-towns.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a class="active" href="index.html">Home</a></li>
             <li><a class="active" href="stargate-ranked.html">Stargate SG-1</a></li>
-            <li><a class="active" href="wyoming-ghost-towns.html">Wyoming Ghost towns</a></li>
+            <li><a class="active" href="wyoming-ghost-towns.html">Wyoming Ghost Towns</a></li>
             <li><a class="active" href="where-pigs-fly.html">Pig Races</a></li>
         </ul>
     </nav>
