--- a/wyoming-ghost-towns.html
+++ b/wyoming-ghost-towns.html
@@ -131,8 +131,12 @@
 					</address>
 					<p><a href="https://www.hmdb.org/m.asp?m=225755">Visit the Historical Marker Database's website</a></p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at felis id quam porttitor posuere. Pellentesque nec aliquet est. Nam malesuada consequat condimentum.</p>
-				</div>
-			</section>
+	    </div>
+			</section> 
+<iframe title="Wyoming Ghost Towns" aria-label="Locator map" id="datawrapper-chart-JMeTN" src="https://datawrapper.dwcdn.net/JMeTN/1/" scrolling="no" frameborder="0" style="border: none;" width="1004" height="693" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+
+</script>
+
 			
     </main>
 
