--- a/stargate-ranked.html
+++ b/stargate-ranked.html
@@ -22,7 +22,10 @@
 
     <main id="content">
         <h1>Stargate SG-1 seasons, in order from worst to best</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at felis id quam porttitor posuere. Pellentesque nec aliquet est. Nam malesuada consequat condimentum. Aliquam rutrum fermentum odio at mattis. Etiam scelerisque enim sit amet tempor ullamcorper. Vestibulum ultricies metus nibh, ut tristique ligula malesuada vel. Nullam id iaculis est.</p>
+        <p>If you’re wondering what is Stargate, don’t worry. It’s everyone's favorite 90s sci-fi franchise they’ve probably never heard of. Or maybe their dads have. Mine missed my first-grade parent-teacher conference to watch the show and protest it coming to an end. Spoiler alert: it didn’t work.</p>
+
+<p>So, as someone who sat and watched all 214 episodes of the 10 seasons, I’m here to rank each and every one for you. While there are a number of spinoffs, including Stargate Atlantis and Stargate Universe (aka divine retribution), for the purpose of this website, we will be focusing on the original and best Stargate SG-1.</p>
+
 
         <section class="media-holder">
             <div class="image-holder">
@@ -32,7 +35,8 @@
                 <h2>Season 7</h2>
                 <p>June 13, 2003</p>
                 <p><a href="https://www.imdb.com/title/tt0118480/episodes/?season=7">A full list of episodes can be found here.</a></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras congue lorem mattis gravida condimentum. Nam semper ullamcorper dolor sit amet posuere. Morbi viverra fringilla sapien quis tincidunt. Aliquam cursus, quam sit amet dignissim eleifend, diam ipsum convallis massa, at luctus metus nulla sed risus.</p>
+<p>Season seven brought on a new director for the show and promptly made its debut for the worst possible episodes of the show I have ever watched. It deserves no more explanation.</p>
+
             </div>
         </section>
 
@@ -44,7 +48,7 @@
                 <h2>Season 1</h2>
                 <p>July 27, 1997</p>
                 <p><a href="https://www.imdb.com/title/tt0118480/episodes/?season=1">A full list of episodes can be found here.</a></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras congue lorem mattis gravida condimentum. Nam semper ullamcorper dolor sit amet posuere. Morbi viverra fringilla sapien quis tincidunt. Aliquam cursus, quam sit amet dignissim eleifend, diam ipsum convallis massa, at luctus metus nulla sed risus.</p>
+<p>It’s a classic, you love it. But you also have a relationship with the episodes in the way that you love that one friend you had in high school, but thank god they didn’t follow you to college. It's nostalgic but without the sort of chemistry and connections between the characters found in the later seasons.</p>
             </div>
         </section>
 
@@ -56,7 +60,7 @@
                 <h2>Season 2</h2>
                 <p>June 26, 1998</p>
                 <p><a href="https://www.imdb.com/title/tt0118480/episodes/?season=2">A full list of episodes can be found here.</a></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras congue lorem mattis gravida condimentum. Nam semper ullamcorper dolor sit amet posuere. Morbi viverra fringilla sapien quis tincidunt. Aliquam cursus, quam sit amet dignissim eleifend, diam ipsum convallis massa, at luctus metus nulla sed risus.</p>
+        <p>Maybe this is a copout but I’m placing it here for the exact same reason. The dynamics aren’t quite solid enough yet. They have to put so much effort into creating storylines that happen effortlessly later in the series. Maybe… a diamond in the rough?</p>
             </div>
         </section>
 
@@ -68,7 +72,7 @@
                 <h2>Season 6</h2>
                 <p>June 7, 2002</p>
                 <p><a href="https://www.imdb.com/title/tt0118480/episodes/?season=6">A full list of episodes can be found here.</a></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras congue lorem mattis gravida condimentum. Nam semper ullamcorper dolor sit amet posuere. Morbi viverra fringilla sapien quis tincidunt. Aliquam cursus, quam sit amet dignissim eleifend, diam ipsum convallis massa, at luctus metus nulla sed risus.</p>
+<p>Notice how one of those faces in the poster is missing his glasses? Wait, no. That’s a completely different character! That’s right. Good riddance; the guy complained far too much. Don’t miss him too much, though. He’ll be back. Plus, this season was also way cool to see some of the overarching plots come to a heading and see one of the leading villains showcase his power.</p>
             </div>
         </section>
 
@@ -80,7 +84,7 @@
                 <h2>Season 9</h2>
                 <p>July 15, 2005</p>
                 <p><a href="https://www.imdb.com/title/tt0118480/episodes/?season=9">A full list of episodes can be found here.</a></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras congue lorem mattis gravida condimentum. Nam semper ullamcorper dolor sit amet posuere. Morbi viverra fringilla sapien quis tincidunt. Aliquam cursus, quam sit amet dignissim eleifend, diam ipsum convallis massa, at luctus metus nulla sed risus.</p>
+<p>Everyone is too mean to this season. Honestly, it was pretty solid based on what we were given. Still, no Richard Dean Anderson? I get it. I went back and forth on this ranking. I figured directly in the middle was fair.</p>
             </div>
         </section>
 
@@ -92,7 +96,7 @@
                 <h2>Season 5</h2>
                 <p>June 29, 2001</p>
                 <p><a href="https://www.imdb.com/title/tt0118480/episodes/?season=5">A full list of episodes can be found here.</a></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras congue lorem mattis gravida condimentum. Nam semper ullamcorper dolor sit amet posuere. Morbi viverra fringilla sapien quis tincidunt. Aliquam cursus, quam sit amet dignissim eleifend, diam ipsum convallis massa, at luctus metus nulla sed risus.</p>
+<p>I love this season. They killed off the nagging scientist. What did I say before? Good riddance. And considering that season five was meant to be the middle of the series, it served as a “hey, we’re still here!” reminder, which I liked.</p>
             </div>
         </section>
 
@@ -104,7 +108,7 @@
                 <h2>Season 3</h2>
                 <p>June 25, 1999</p>
                 <p><a href="https://www.imdb.com/title/tt0118480/episodes/?season=3">A full list of episodes can be found here.</a></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras congue lorem mattis gravida condimentum. Nam semper ullamcorper dolor sit amet posuere. Morbi viverra fringilla sapien quis tincidunt. Aliquam cursus, quam sit amet dignissim eleifend, diam ipsum convallis massa, at luctus metus nulla sed risus.</p>
+<p>Season threes are always notoriously good. The show has fully gotten into its grove, the characters’ dynamics fit perfectly, and the lore dropped is insane. Not to completely nerd out, but the introduction to the Replicators following the reveal of the System Lords is so well done. It fully freaked me out in middle school.</p>
             </div>
         </section>
 
@@ -116,7 +120,7 @@
                 <h2>Season 10</h2>
                 <p>July 14, 2006</p>
                 <p><a href="https://www.imdb.com/title/tt0118480/episodes/?season=10">A full list of episodes can be found here.</a></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras congue lorem mattis gravida condimentum. Nam semper ullamcorper dolor sit amet posuere. Morbi viverra fringilla sapien quis tincidunt. Aliquam cursus, quam sit amet dignissim eleifend, diam ipsum convallis massa, at luctus metus nulla sed risus.</p>
+<p>Is this season ranked so highly because they finally defeated the Asgard? Yes! It was so satisfying to see all of the years of work pay off. It’s like the opposite of the “How I Met Your Mother” season finale. I said what I said.</p>
             </div>
         </section>
 
@@ -128,7 +132,7 @@
           <h2>Season 8</h2>
           <p>July 9, 2004</p>
           <p><a href="https://www.imdb.com/title/tt0118480/episodes/?season=8">A full list of episodes can be found here.</a></p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras congue lorem mattis gravida condimentum. Nam semper ullamcorper dolor sit amet posuere. Morbi viverra fringilla sapien quis tincidunt. Aliquam cursus, quam sit amet dignissim eleifend, diam ipsum convallis massa, at luctus metus nulla sed risus. </p>
+<p>Like that last review, this season is also ranked highly because they very smoothly brought many overarching plots to an end. That includes the Replicators, i.e., why it’s ranked above season 10. All my homies hate the Goa'uld.</p>
         </div>
       </section>
 
@@ -140,7 +144,7 @@
           <h2>Season 4</h2>
           <p>June 30, 2000</p>
           <p><a href="https://www.imdb.com/title/tt0118480/episodes/?season=4">A full list of episodes can be found here.</a></p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras congue lorem mattis gravida condimentum. Nam semper ullamcorper dolor sit amet posuere. Morbi viverra fringilla sapien quis tincidunt. Aliquam cursus, quam sit amet dignissim eleifend, diam ipsum convallis massa, at luctus metus nulla sed risus. </p>
+<p>The episode “Window of Opportunity” is some of the best TV I’ve ever seen. It may be my Roman Empire. However, the rage I felt for the episode “2010”? Unmatched. The writing was harrowing and intriguing, leaving me on the edge of my seat. They left us with an “and then it was all a dream ending” but whatever, you can’t have it all. Thank you and goodnight.</p>
         </div>
       </section>
 
