--- a/stargate-ranked.html
+++ b/stargate-ranked.html
@@ -22,7 +22,7 @@
 
     <main id="content">
         <h1>Stargate SG-1 seasons, in order from worst to best</h1>
-        <p>If you’re wondering what is Stargate, don’t worry. It’s everyone's favorite 90s sci-fi franchise they’ve probably never heard of. Or maybe their dads have. Mine missed my first-grade parent-teacher conference to watch the show and protest it coming to an end. Spoiler alert: it didn’t work.</p>
+        <p>If you’re wondering what is Stargate, don’t worry. It’s everyone's favorite 90s sci-fi franchise they’ve probably never heard of. Or maybe their dads have. Mine missed my first-grade parent-teacher conference to watch the show and protest it coming to an end.</p>
 
 <p>So, as someone who sat and watched all 214 episodes of the 10 seasons, I’m here to rank each and every one for you. While there are a number of spinoffs, including Stargate Atlantis and Stargate Universe (aka divine retribution), for the purpose of this website, we will be focusing on the original and best Stargate SG-1.</p>
 
@@ -48,7 +48,7 @@
                 <h2>Season 1</h2>
                 <p>July 27, 1997</p>
                 <p><a href="https://www.imdb.com/title/tt0118480/episodes/?season=1">A full list of episodes can be found here.</a></p>
-<p>It’s a classic, you love it. But you also have a relationship with the episodes in the way that you love that one friend you had in high school, but thank god they didn’t follow you to college. It's nostalgic but without the sort of chemistry and connections between the characters found in the later seasons.</p>
+<p>It’s a classic, you love it. But you also have a relationship with the episodes in the way that you love that one friend you had in high school, but let's be real. It's a good thing they didn’t follow you to college. It's nostalgic but without the sort of chemistry and connections between the characters found in the later seasons.</p>
             </div>
         </section>
 
@@ -132,7 +132,7 @@
           <h2>Season 8</h2>
           <p>July 9, 2004</p>
           <p><a href="https://www.imdb.com/title/tt0118480/episodes/?season=8">A full list of episodes can be found here.</a></p>
-<p>Like that last review, this season is also ranked highly because they very smoothly brought many overarching plots to an end. That includes the Replicators, i.e., why it’s ranked above season 10. All my homies hate the Goa'uld.</p>
+<p>Like that last review, this season is also ranked highly because they very smoothly brought many overarching plots to an end. That includes the Replicators, i.e., why it’s ranked above season ten. All my homies hate the Goa'uld.</p>
         </div>
       </section>
 
