--- a/stargate-ranked.html
+++ b/stargate-ranked.html
@@ -84,7 +84,7 @@
                 <h2>Season 9</h2>
                 <p>July 15, 2005</p>
                 <p><a href="https://www.imdb.com/title/tt0118480/episodes/?season=9">A full list of episodes can be found here.</a></p>
-<p>Everyone is too mean to this season. Honestly, it was pretty solid based on what we were given. Still, no Richard Dean Anderson? I get it. I went back and forth on this ranking. I figured directly in the middle was fair.</p>
+<p>Everyone is too mean to this season. Honestly, it was pretty solid based on what we were given. Still, no Richard Dean Anderson? I get it. I went back and forth on this ranking. I figured that placing it directly in the middle was fair to everyone on both sides.</p>
             </div>
         </section>
 
