--- a/stargate-ranked.html
+++ b/stargate-ranked.html
@@ -120,7 +120,7 @@
                 <h2>Season 10</h2>
                 <p>July 14, 2006</p>
                 <p><a href="https://www.imdb.com/title/tt0118480/episodes/?season=10">A full list of episodes can be found here.</a></p>
-<p>Is this season ranked so highly because they finally defeated the Asgard? Yes! It was so satisfying to see all of the years of work pay off. It’s like the opposite of the “How I Met Your Mother” season finale. I said what I said.</p>
+<p>Is this season ranked so highly because they finally defeated the Asgard? Yes! It was so satisfying to see all of the years of work pay off. It’s like the opposite of the “How I Met Your Mother” season finale. Yes, I said what I said.</p>
             </div>
         </section>
 
