--- a/stargate-ranked.html
+++ b/stargate-ranked.html
@@ -48,7 +48,7 @@
                 <h2>Season 1</h2>
                 <p>July 27, 1997</p>
                 <p><a href="https://www.imdb.com/title/tt0118480/episodes/?season=1">A full list of episodes can be found here.</a></p>
-<p>It’s a classic, you love it. But you also have a relationship with the episodes in the way that you love that one friend you had in high school, but let's be real. It's a good thing they didn’t follow you to college. It's nostalgic but without the sort of chemistry and connections between the characters found in the later seasons.</p>
+<p>It’s a classic, you love it. But you love it in the way that you love that one friend you had in high school. Let's be real. It's a good thing they didn’t follow you to college. The episodes are nostalgic but without the sort of chemistry and connections between the characters found in the later seasons.</p>
             </div>
         </section>
 
